--- a/前端.md
+++ b/前端.md
@@ -6,6 +6,7 @@
 | ------------------------------------ | ---------------------------- |
 | git config --global user.name 用户名 | 设置用户签名                 |
 | git config --global user.email 邮箱  | 设置用户签名                 |
+| git config --global -l               | 查看配置                     |
 | git init                             | 初始化本地库                 |
 | git status                           | 查看本地库状态               |
 | git add 文件名                       | 添加到暂存区                 |
