--- a/后端.md
+++ b/后端.md
@@ -667,6 +667,34 @@ System.out.println(list2 == copy2); // false
 
 
 
+### jdk17
+
+#### switch
+
+- 原switch
+
+  ```java
+  int days = 21;
+  String desc;
+  
+  ```
+
+  
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 ## 锁
@@ -690,7 +718,7 @@ System.out.println(list2 == copy2); // false
                 break;
             }
         }
-    }
+    	}
     ```
 
 - 注意事项
