--- a/后端.md
+++ b/后端.md
@@ -667,7 +667,7 @@ System.out.println(list2 == copy2); // false
 
 
 
-### jdk17
+### jdk12-17
 
 #### switch
 
@@ -676,20 +676,184 @@ System.out.println(list2 == copy2); // false
   ```java
   int days = 21;
   String desc;
+  switch (days/10) {
+      case 1:
+          desc = "一旬";
+          break;
+      case 2:
+          desc = "二旬";
+          break;
+      default:
+          desc = "其他";
+          break;
+  }
+  ```
   
+- 增强 switch（jdk12）：只支持对数值和字符串常量匹配
+
+  ```java
+  int days = 21;
+  String desc = switch (days/10) {
+      case 1 -> "一旬";
+      case 2 -> "二旬";
+      default -> "其他";
+  }
+  ```
+  
+- 增强 switch（jdk17）
+
+  - 匹配数值
+
+    ```java
+    int days = 21;
+    String desc = switch (days/10) {
+        case 0, 1, 2 -> {
+            System.out.println("一个月不到了！");
+            yield "一月以内";
+        }
+        case 3, 4, 5 -> "两月以内";
+        default -> "两月以上";
+    }
+    ```
+
+  - 匹配对象类型
+
+    ```java
+    String type = switch(object) {
+            case null -> "null";
+            case Integer i -> "是个Integer数值";
+            default -> "其他类型";
+    }
+    ```
+    
+
+
+
+#### 密封类
+
+```java
+// sealed 标注的类，只能有 permits 指定的类继承
+public sealed class Animal permits Dog, Cat {
+    
+}
+
+// 子类必须被 final 或 non-sealed 修饰
+// 子类和父类必须同包
+public final class Cat {}
+public no class Dog {}
+```
+
+
+
+#### Record类
+
+```java
+public class RecordTest {
+    public static void main(String[] args) {
+        User userRecord1 = new User(1L, "zhangsan");
+        User userRecord2 = new User(1L, "zhangsan");
+        // 属性值相同的不同record对象，equals 为 true
+        System.out.println(userRecord1.equals(userRecord2))
+    }
+}
+
+// 提供且只提供 全参构造方法 和 属性获取方法
+// 中途不能修改属性
+// 重写 equals hashcode toString 方法
+public record User(Long userId, String name) {}
+```
+
+
+
+#### 其他特性
+
+- 文本块
+
+  - jdk15
+
+    ```java
+    String html = """
+        <html>
+            <body>
+                <h1>%s</h1>
+            </body>
+        </html>
+        """;
+    
+    String parseHtml = String.format(html, "这是一个标题");
+    ```
+  
+  - jdk17：新增符号
+  
+    - \：至于行尾，用来将两行连接为一行
+    - \s：单个空白字符
+  
+
+- 增强 instanceof（jdk14预览版提出，jdk16正式加入）
+
+  - 原
+
+    ```java
+    Object o = 1;
+    if (o instanceof Integer) {
+        Integer i = (Integer) o; // 需要强转
+        System.out.println("这是一个Integer，值为："+i);
+    }
+    ```
+
+  - 新
+
+    ```java
+    Object o = 1;
+    if (o instanceof Integer i) {
+        System.out.println("这是一个Integer，值为："+i);
+    }
+    ```
+
+- 空指针异常优化：指出那个对象报出空指针异常
+
+- ZGC垃圾收集器：
+
+  - 优化
+    - STW：垃圾回收时触发，所有工作线程停止，会出现卡顿，jdk17将 STW 时间控制在10ms内，垃圾回收时不卡顿
+    - jdk17 堆内存可以设置特别大，减少垃圾回收次数
+  - 使用：jdk11和jdk17默认垃圾回收器依旧是G1
+    - 添加JVM选项即可开启ZGC   `-xx:+UseZGC`
+
+
+
+
+
+### jdk18-21
+
+#### switch
+
+- jdk17
+
+  ```java
+  record Point(int x, int y) {}
+  
+  static void printSum(Object obj) {
+      if (obj instanceof Point(intx, int y)) {
+          System.out.println(x+y);
+      }
+  }
   ```
 
+- jdk21
+
+  ```java
+  record Point(int x, int y) {}
   
-
-  
-
-
-
-
-
-
-
-
+  static void printSum(Object obj) {
+      switch(obj) {
+          case Point(int x, int y) -> System.out.println(x+y);
+          case null, default -> {
+              // Do something
+          }
+      }
+  }
+  ```
 
 
 
