--- a/后端.md
+++ b/后端.md
@@ -641,6 +641,14 @@ System.out.println(list2 == copy2); // false
 
 ### jdk11
 
+#### jre
+
+```shell
+bin\jlink.exe --module-path jmods --add-modules java.desktop --output jre
+```
+
+
+
 #### String
 
 - isBlank()：判断字符串是否为空白
@@ -652,11 +660,13 @@ System.out.println(list2 == copy2); // false
 
 
 
-#### ZGC
-
-
-
 #### 其他特性
+
+- ZGC
+
+  ```shell
+  -XX:+UseZGC
+  ```
 
 - 局部变量类型推断的升级
 - 支持编译解释一次完成：java HelloWorld.java
