Dec 16th 2023 First

--- a/前端.md
+++ b/前端.md
@@ -350,10 +350,9 @@
       - 给父元素设置overflow：hidden
       - 转换成行内块元素
       - 设置浮动、定位
-
 - 行内元素的 padding 和 margin 在垂直方向不生效，可以用 line-height
 
-
+![盒子模型](D:\picture\typora\前端\盒子模型.png)
 
 
 
@@ -2040,6 +2039,11 @@ https://pxlab.cn/color/index.html
       选择器 {
           样式
       }
+  }
+  
+  // 屏幕大于 1024px 或小于 1440px 时应用该样式
+  @media screen and (min-width: 1024px) and (max-width: 1440px) { 
+    ...
   }
   ```
 
