Oct 17st 2023 First Commit

--- a/前端.md
+++ b/前端.md
@@ -3540,3 +3540,290 @@ http://cli.vuejs.org/zh
   - 查看框架的所有版本：npm view xxx versions
   - 安装脚手架中webpack版本对应的less-loader版本：npm i less-loader@10
 
+
+
+
+
+
+
+
+
+# Canvas
+
+
+
+## 基础使用
+
+- 基础图形
+
+  - 绘制矩形 并 填充
+
+    ```js
+    ctx.fillRect(100, 100, 100, 100)
+    ```
+
+  - 绘制矩形 并 显示路径
+
+    ```js
+    ctx.strokeRect(300, 100, 100, 100)
+    ```
+
+  - 逐渐擦除
+
+    ```js
+    ctx.fillRect(100, 250, 100, 100)
+    let startPoint = {width: 105, height: 255}
+    let clearRange = {width: 90, height: 90}
+    let nowClear = {width: 0, height: 0}
+    let WtoH = clearRange.width/clearRange.height
+    ctx.timeout = setInterval(() => {
+        if (nowClear.width>=clearRange.height) {
+            clearInterval(ctx.timeout)
+        }
+        nowClear = {width: nowClear.width+=WtoH, height: nowClear.height+=1}
+        ctx.clearRect(startPoint.width, startPoint.height, nowClear.width, nowClear.height)
+    }, 10)
+    ```
+
+  - 绘制线段
+
+    ```js
+    ctx.beginPath()
+    ctx.moveTo(500, 100)
+    ctx.lineTo(600, 350)
+    ctx.lineTo(500, 350);
+    ctx.lineTo(500, 100)
+    ctx.stroke()
+    ctx.closePath()
+    ```
+
+- 绘制圆弧
+
+  - 根据圆心
+
+    ```js
+    ctx.beginPath() // 下笔
+    // 参数：圆心x，圆心y，半径，起始角度，终止角度，默认顺时针：false
+    ctx.arc(350, 300, 50, 0, Math.PI/2, true) 
+    ctx.stroke()
+    ctx.closePath() // 提笔
+    ```
+
+  - 三点绘制圆弧
+
+    ```js
+    ctx.beginPath()
+    ctx.strokeStyle = "red"
+    ctx.moveTo(500, 100)
+    // 参数：第二个点x，第二个点y，第三个点x，第三个点y，半径
+    ctx.arcTo(600, 350, 500, 350, 40)
+    ctx.stroke()
+    ctx.closePath()
+    ```
+
+- svg、Path2D
+
+  ```js
+  let polyline = new Path2D("M100 30 h500 v20 h-500 z")
+  ctx.stroke(polyline)
+  ```
+
+  
+
+
+
+## 填充与颜色
+
+- 颜色线性渐变
+
+  - ctx.createLinearGradient(左上角点x，左上角点y，右下角点x，右下角点y)
+
+  - 实例
+
+    ```js
+    let i = 0
+    let flag = true
+    let render = () => {
+        ctx.clearRect(100, 400, 100, 100)
+        if (flag) i += .005
+        else i-=.005
+        if (i>.99) flag = false
+        if (i<.01) flag = true
+        // 参数：左上角点x，左上角点y，右下角点x，右下角点y
+        let canvasGradient = ctx.createLinearGradient(100, 400, 200, 500)
+        canvasGradient.addColorStop(0, "yellow")
+        canvasGradient.addColorStop(i, "rgb(183,218,136)")
+        canvasGradient.addColorStop(1, "aqua")
+        ctx.fillStyle = canvasGradient
+        ctx.fillRect(100, 400, 100, 100)
+        requestAnimationFrame(render)
+    }
+    requestAnimationFrame(render)
+    ```
+
+- 颜色径向渐变
+
+  - ctx.createRadialGradient(圆心1x, 圆心1y, 半径1, 圆心2x, 圆心2y, 半径2)
+
+  - 实例
+
+    ```js
+    ctx.beginPath()
+    let radialGradient = ctx.createRadialGradient(350, 450, 0, 350, 450, 100);
+    radialGradient.addColorStop(0, "yellow")
+    radialGradient.addColorStop(1, "aqua")
+    ctx.fillStyle = radialGradient
+    ctx.arc(350, 450, 50, 0, 2*Math.PI)
+    ctx.fill()
+    ctx.closePath()
+    ```
+
+- 圆锥渐变
+
+- 印章
+
+  - 实例
+
+    ```js
+    let img = new Image()
+    img.src = "./images/oneImage.png"
+    
+    img.onload = () => {
+        // img 可以是 Image对象 或 Canvas对象
+        let pattern = ctx.createPattern(img, "repeat")
+        ctx.fillSytle = pattern
+        ctx.fillRect(0, 0, 600, 400)
+    }
+    ```
+
+  - 填充方式
+
+    - repeat：水平垂直重复
+    - no-repeat：不重复
+    - repeat-x、repeat-y：定向重复
+
+
+
+
+
+## 属性
+
+- 线条宽度：lineWidth
+
+- 线条端点样式：lineCap
+
+  - butt：平齐（默认）
+  - round：半圆突出
+  - square：方形突出
+
+- 线段连接处样式：lineJoin
+
+  - miter：填充外侧连接（默认）
+  - round：圆润连接
+  - bevel：磨平
+
+- 斜接延伸限制：miterLimit = 数值
+
+- 虚线：ctx.setLineDash( [ 虚线点长度, 间隔长度 ] )
+
+  - 偏移调整：ctx.lineDashOffset = 数值
+
+  - 实例
+
+    ```js
+    ctx.setLineDash([10, 5])
+    let offset = 0
+    setInterval(() => {
+        offset+=1
+        ctx.lineDashOffset = offset
+        ctx.clearRect(95, 95, 110, 110)
+        ctx.strokeRect(100, 100, 100, 100)
+    }, 20)
+    ```
+
+- 阴影
+
+  - 阴影x轴偏移：ctx.shadowOffsetX = 数值
+
+  - 阴影y轴偏移：ctx.shadowOffsetY = 数值
+
+  - 阴影虚化度：ctx.shadowBlur = 数值
+
+  - 阴影颜色：ctx.shadowColor = “rgba()”
+
+
+
+
+
+## 图片与动画
+
+- 绘制图片
+
+  ```js
+  let image = new Image()
+  image.src = "./images/oneImage.png"
+  image.onload = () => {
+      ctx.draw(图片对象, 起始位置x, 起始位置y [, 终止位置x, 终止位置y])
+      ctx.draw(图片对象, 图片裁剪起始位置x, 图片裁剪起始位置y, 图片裁剪宽度, 图片裁剪高度
+               起始位置x, 起始位置y, 终止位置x, 终止位置y)
+  }
+  ```
+
+- 绘制视频
+
+  ```js
+  let video = document.querySelector("video")
+  let btn = document.querySelector("#btn")
+  btn.onclick = () => {
+      if (video.paused) {
+          video.play()
+          btn.innerHTML = "暂停"
+      }else {
+          video.pause()
+          btn.innerHTML = "播放"
+      }
+      render()
+  }
+  let image = new Image()
+  image.src = "./images/logo.png"
+  let render = () => {
+      ctx.drawImage(video, 0, 0, 600, 400)
+      ctx.drawImage(image, 480, 320, 100, 70)
+      requestAnimationFrame(render)
+  }
+  ```
+
+- 绘制文字
+
+  - 文字：ctx.font = "16px Microsoft YaHei"
+  - 填充文字：fillText(text, x, y [, maxWidth])
+  - 绘制文字轮廓：strokeText(text, x, y [, maxWidth])
+  - 对齐方式
+    - 水平：ctx.textAlign = "center"
+      - start：默认
+      - center
+      - end
+      - left
+      - right
+    - 垂直（基线对齐）：ctx.textBaseline = "middle"
+      - middle
+      - textBaseline
+      - top
+      - bottom
+      - alphabetic：默认
+    - 方向：ctx.direction = "rtl"（right to left）
+
+- 动画
+
+
+
+
+
+
+
+
+
+
+
+
+
