Oct 17th 2023 First commit

--- a/前端.md
+++ b/前端.md
@@ -3624,10 +3624,17 @@ http://cli.vuejs.org/zh
 - svg、Path2D
 
   ```js
+  // 方法一
   let polyline = new Path2D("M100 30 h500 v20 h-500 z")
   ctx.stroke(polyline)
+  
+  // 方法二
+  let onePath = new Paht2D()
+  onePath.moveTo(x, y)
+  // 二次贝塞尔曲线（两个控制点，一个终点）
+  onePath.bezierCureTo(x1, y1, x2, y2, x3, y3)
   ```
-
+  
   
 
 
@@ -3701,6 +3708,62 @@ http://cli.vuejs.org/zh
     - repeat：水平垂直重复
     - no-repeat：不重复
     - repeat-x、repeat-y：定向重复
+  
+- 合成：ctx.globalCompositeOperation
+
+  - 步骤
+
+    - 绘制图片1
+    - 设置 globalCompositeOperation
+    - 绘制图片2（图片2根据设置值与图片1进行合成）
+
+  - 参数
+
+  - 实例：刮刮乐
+
+    ```html
+    <div class="guaguale">
+        感谢参与
+        <canvas id="guaCanvas" width="400" height="200"></canvas>
+    </div>
+    ```
+
+    ```css
+    .guaguale {
+        position: relative;
+        width: 400px;
+        height: 200px;
+        font: normal bold 2em 楷体;
+        line-height: 200px;
+        text-align: center;
+    }
+    #guaCanvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    ```
+
+    ```js
+    let guaCanvasEle = document.querySelector("#guaCanvas");
+    let guaCtx = guaCanvasEle.getContext("2d");
+    guaCtx.fillStyle = "rgb(204,204,204)"
+    guaCtx.fillRect(0, 0, 400, 200)
+    // 设置合成样式
+    guaCtx.globalCompositeOperation = "destination-out"
+    let canDraw = false
+    guaCanvasEle.onmousedown = () => canDraw = true
+    guaCanvasEle.onmouseleave = () => canDraw = false
+    guaCanvasEle.onmouseup = () => canDraw = false
+    guaCanvasEle.onmousemove = (event) => {
+        if (!canDraw) return
+        guaCtx.beginPath()
+        guaCtx.arc(event.offsetX, event.offsetY, 30, 0, 2*Math.PI)
+        guaCtx.fill()
+        guaCtx.closePath()
+    }
+    ```
+
 
 
 
@@ -3764,7 +3827,7 @@ http://cli.vuejs.org/zh
   image.src = "./images/oneImage.png"
   image.onload = () => {
       ctx.draw(图片对象, 起始位置x, 起始位置y [, 终止位置x, 终止位置y])
-      ctx.draw(图片对象, 图片裁剪起始位置x, 图片裁剪起始位置y, 图片裁剪宽度, 图片裁剪高度
+      ctx.draw(图片对象, 图片的裁剪起始位置x, 图片的裁剪起始位置y, 图片裁剪宽度, 图片裁剪高度
                起始位置x, 起始位置y, 终止位置x, 终止位置y)
   }
   ```
@@ -3813,17 +3876,126 @@ http://cli.vuejs.org/zh
       - alphabetic：默认
     - 方向：ctx.direction = "rtl"（right to left）
 
-- 动画
+- 坐标系变动
+
+  - 位移：ctx.translate(x, y)
+  - 缩放：ctx.scale(水平放大倍数, 竖直放大倍数)
+  - 旋转：ctx.rotate(弧度制数值)
+  - 矩阵变换：ctx.transform(a, b, c, d, e, f)
+    - a、b：x轴单位向量对应的x，y
+    - c、d：y轴单位向量对应的x，y
+    - e、f：x、y轴位移量
+
+- 裁剪：
+
+  - ctx.clip()
+    - 绘制路径
+    - clip()
+    - 绘制图片（自动根据路径裁剪图片）
+
+  - ctx.clip(Path2D对象)
+
+- 保存与恢复
+
+  - ctx.save()
+  - ctx.restore()
+  - 可多次保存，保存的画笔数据储存在栈中，每一次读取的数据由中栈中取出，最后保存的数据最先取出
+
+
+- 像素处理
+
+  - 获得所有像素信息：ctx.getImageData(起点x, 起点y, 宽度, 高度)
+
+    ``` js
+    let imageData = ctx.getImageData(0, 0, 600, 400)
+    
+    // imageData.data 是一个数组，存储的是每个像素的rgba值
+    for(let i = 0; i < imageData.data.length, i+=4) {
+        console.log(image.data[i]) // r
+        console.log(image.data[i+1]) // g
+        console.log(image.data[i+2]) // b
+        console.log(image.data[i+3]) // a
+    }
+    
+    // 将修改后的像素数据重新渲染的画布上
+    ctx.putImageData(imageData, 起点x, 起点y) // 全部渲染
+    ctx.putImageData(imageData, 起点x, 起点y, 渲染起点x, 渲染起点y, 渲染宽度, 渲染高度)
+    ```
+
+- 判断是否在路径内：ctx.isPointInPath(路径对象(如Path2D对象), x, y)
 
 
 
 
 
+## 封装
 
+```js
+let canvasEle = document.querySelector("#canvas1");
+let ctx = canvasEle.getContext("2d");
+class Heart {
+    constructor(x, y, size) {
+        this.x = x
+        this.y = y
+        this.size = size
+        this.color = "blue"
+        this.isIn = false
+        this.eventMapList = {
+            hover: [],
+            leave: []
+        }
+        canvasEle.onmousemove = (e) => {
+            let x = e.offsetX
+            let y = e.offsetY
+            this.isIn = ctx.isPointInPath(this.heartPath, x, y)
+            if (this.isIn) this.eventMapList.hover.forEach(item => item())
+            else this.eventMapList.leave.forEach(item => item())
+        }
+    }
+    onHover(fn) {
+        this.eventMapList.hover.push(fn)
+    }
+    onLeave(fn) {
+        this.eventMapList.leave.push(fn)
+    }
+    setPosition(x, y) {
+        this.x = x
+        this.y = y
+    }
+    setSize(size) {
+        this.size = size
+    }
+    setColor(color) {
+        this.color = color
+    }
+    draw() {
+        this.heartPath = new Path2D()
+        this.heartPath.moveTo(this.x, this.y)
+        this.heartPath.bezierCurveTo(this.x+this.size/2, this.y-this.size/2,
+            this.x+this.size, this.y, this.x, this.y+this.size/2)
+        this.heartPath.bezierCurveTo(this.x-this.size, this.y,
+            this.x-this.size/2, this.y-this.size/2, this.x, this.y)
+        ctx.save()
+        ctx.fillStyle = this.color
+        ctx.fill(this.heartPath)
+        ctx.restore()
+    }
+}
 
-
-
-
-
-
+let heart = new Heart(100, 100, 100)
+heart.onHover(() => {
+    heart.setColor("red")
+    heart.setSize(120)
+})
+heart.onLeave(() => {
+    heart.setSize(100)
+    heart.setColor("blue")
+})
+function drawHeart() {
+    ctx.clearRect(0, 0, canvasEle.width, canvasEle.height)
+    heart.draw()
+    requestAnimationFrame(drawHeart)
+}
+drawHeart()
+```
 
