Oct 18th 2023 Second Commit

--- a/后端2.md
+++ b/后端2.md
@@ -2452,6 +2452,150 @@ public class MyDao {
 
 
 
+# JVM
+
+> The Java Virtual Machine
+
+## 基础
+
+### 字节码文件的组成
+
+- 基本信息：魔数、字节码文件对应的 java 版本号、访问标识（public final 等等）、父类和接口
+
+  - Magic魔数
+
+    - 文件不能通过文件扩展名来确定文件类型
+
+    - 软件使用文件的头几个字节（文件头）来校验文件的类型，如果软件不支持该种类型就会报错
+
+      | 文件类型   | 字节数 | 文件头                     |
+      | ---------- | ------ | -------------------------- |
+      | JPEG       | 3      | FFD8FF                     |
+      | PNG        | 4      | 89504E47（文件尾也有要求） |
+      | bmp        | 2      | 424D                       |
+      | XML        | 5      | 3C3F786D6C                 |
+      | AVI        | 4      | 41564920                   |
+      | JAVA字节码 | 4      | CAFEBABE                   |
+
+  - 版本号：jdk1.2后，主版本号-44 为字节码jdk版本
+
+- 常量池：保存了字符串常量、类或接口名、字段名（主要在字节码指令中使用）
+
+- 字段：当前类或接口中声明的字段信息
+
+- 方法：当前类或接口声明的方法信息（字节码指令）
+
+  - 操作数栈（临时存放）
+
+  - 局部变量表数据（局部变量存放位置）
+
+    ```java
+    public static void main(String args) {
+        int i = 0;
+        int j = i+1;
+    }
+    ```
+
+    | 索引 | 0    | 1    | 2    |
+    | ---- | ---- | ---- | ---- |
+    | 数组 | args | i    | j    |
+
+  - 实例
+
+    > i++ 与 ++i 的区别
+    >
+    > > i++：会先让栈中保留一份原始值，再计算
+    > >
+    > > ++i：会先计算，在让栈中保留一份计算后的值
+
+    ```java
+    public static void main(String args) {
+        int i = 0;
+        i = i++;
+        // System.out.println(i) // 0
+    }
+    
+    // 指令
+    iconst_0     // 将0存到操作数栈中           栈：->[0] 数组：[args, i]
+    istore_1     // 从栈中取出一个存到数组1号位   栈：->[] 数组：[args, i=0]
+    iload_1      // 将数组1号位的值加载入栈      栈：->[0] 数组：[args, i=0]
+    iinc 1 by 1  // 对数组1号位的值加1          栈：->[0] 数组：[args, i=1]
+    istore_1     // 从栈中取出一个存到数组1号位   栈：->[] 数组：[args, i=0]
+    return
+    ```
+
+    ```java
+    public static void main(String args) {
+        int i = 0;
+        i = ++i;
+        // System.out.println(i) // 1
+    }
+    
+    // 指令
+    iconst_0     // 将0存到操作数栈中           栈：->[0] 数组：[args, i]
+    istore_1     // 从栈中取出一个存到数组1号位   栈：->[] 数组：[args, i=0]
+    iinc 1 by 1  // 对数组1号位的值加1          栈：->[] 数组：[args, i=1]
+    iload_1      // 将数组1号位的值加载入栈      栈：->[1] 数组：[args, i=1]
+    istore_1     // 从栈中取出一个存到数组1号位   栈：->[] 数组：[args, i=1]
+    return
+    ```
+
+    ```java
+    private static int number = 3;
+    public static void add1() {
+        return number++;
+    }
+     // 先复制 dup，后计算
+    getstatic #1   // #1处静态字段值入栈      栈：->[3]       数组：[]
+    dup            // 复制栈顶部数据          栈：->[3, 3]    数组：[]
+    iconst_1       //                      栈：->[1, 3, 3] 数组：[]
+    iadd           // 让栈顶部两个数相加      栈：->[4, 3]    数组：[]
+    putstatic #1   // 将栈顶部值存到#1处      栈：->[3]       数组：[]
+    ireturn        // 返回栈顶部值           栈：->[]        数组：[]
+    ```
+
+    ```java
+    private static int number = 3;
+    public static void add1() {
+        return ++number;
+    } 
+         
+     // 先计算，后复制dup
+    getstatic #1   // #1处静态字段值入栈      栈：->[3]       数组：[]
+    iconst_1       //                      栈：->[1, 3]    数组：[]
+    iadd           //                      栈：->[4]       数组：[]
+    dup            // 复制栈顶部数据          栈：->[4, 4]    数组：[]
+    putstatic #1   // 将栈顶部值存到#1处      栈：->[4]       数组：[]
+    ireturn        // 返回栈顶部值           栈：->[]        数组：[]
+    ```
+
+    效率：
+
+    ```java
+    public static void add6() {
+    int i = 0, j = 0, k = 0, l = 0, m = 0;
+    i++;          // iinc 0 by 1
+    j = j+1;      // iload_1  iconst_1  iadd  istore_1
+    k+=1;         // iinc 2 by 1
+    ++l;          // iinc 3 by 1
+    m+=3;         // iinc 4 by 3   效率最高
+    }
+    ```
+
+- 属性：类的属性，比如源码的文件名，内部类的列表等
+
+
+
+
+
+
+
+
+
+
+
+
+
 # MQ
 
 
