--- a/后端2.md
+++ b/后端2.md
@@ -2458,7 +2458,7 @@ public class MyDao {
 
 ## 基础
 
-### 字节码文件的组成
+### 字节码文件
 
 - 基本信息：魔数、字节码文件对应的 java 版本号、访问标识（public final 等等）、父类和接口
 
@@ -2587,6 +2587,166 @@ public class MyDao {
 
 
 
+
+### Arthas
+
+> <a href="https://arthas.aliyun.com/doc/">Arthas 是一款线上监控诊断产品</a>
+
+- 启动
+
+  ```shell
+  java -jar arthas-boot.jar
+  ```
+
+- 常用指令
+  - dashboard ：显示当前系统的实时数据面板
+    - [-i]：刷新实时数据的时间间隔（ms），默认5000ms
+    - [-n]：刷新实时数据的次数
+  - dump：将已加载类的字节码文件输出到特定目录
+    - class-pattern：类的全路径限定名（cn.eli.SpringApp)
+    - [-d]：指定目录
+  - jad：反编译已加载类的源码
+    - class-pattern：类的全路径限定名
+
+
+
+
+
+### 类的生命周期
+
+- 加载
+
+  - 首先，类加载器根据类的全限定名通过不同渠道以二进制流的方式获取字节码信息
+    - 本地文件中的类
+    - 动态代理生成的类
+    - 通过网络传输的类
+  - 类加载器在加载完类之后，java虚拟机会将字节码中的信息保存到方法区中：生成一个 InstanceKlass 对象，保存类的所有信息（如基本信息、常量池、字段、方法等），还包含实现特定功能比如多态的信息（虚方法表）
+  - java虚拟机还会在堆中生成一份与方法区中数据类似的 java.lang.Class 对象，作用是在 java代码中去获取类的信息以及存储静态字段的数据（如反射）（jdk8及之后静态字段数据存放在堆中的类信息中）
+  - 方法区中的类数据 和 堆区中的类数据 相关联
+  - 为什么在方法区中和堆中都生成一份类数据
+    - 方法区中的是由c++生成的，不便操作
+    - 方法区中的类的信息包含了一些不需要开发者使用的数据（安全性和便携性）
+
+- 连接
+
+  - 验证：验证内容是否满足《java虚拟机规范》
+
+    - 魔数的校验，文件是否以0xCAFEBABE开头
+    - 元信息的验证，如类必须有父类
+    - 验证程序执行指令的语义，如 goto 10  跳转的10号指令是否存在
+    - 字节码版本与jdk版本校验
+
+  - 准备：给静态变量赋初始值（如果静态变量被final修饰，则在准备阶段就赋上指定值）
+
+    | 数据类型 | 初始值   | 数据类型     | 初始值 |
+    | -------- | -------- | ------------ | ------ |
+    | int      | 0        | byte         | 0      |
+    | long     | 0L       | boolean      | false  |
+    | short    | 0        | double       | 0.0    |
+    | char     | '\u0000' | 引用数据类型 | null   |
+
+  - 解析：将常量池中的符号引用（如#2）替换为指向内存的直接引用
+
+- 初始化：执行静态代码块中的代码，为静态变量赋值
+
+  ```java
+  public class Demo {
+      static {
+          value = 2;
+      }
+      public static int value = 1;
+      public static void main(String[] args) {
+          System.out.println(value); // 值为1，static自上而下执行，但main方法最后执行
+      }
+  }
+  
+  // 方法
+  // [0] <init> 构造方法
+  // [1] main
+  // [2] <clinit> 该方法不一定存在。表示初始化阶段执行的操作
+  //      iconst_2;  putstatic #2;  iconst_1;   putstatic #2;   return;
+  ```
+
+  - 以下几种方式会导致类的初始化
+
+    > 添加  **-XX:+TranceClassLoading** 参数可以打印出加载并初始化的类
+
+    - 访问一个类的静态变量或静态方法，<font color="red">如果变量是final修饰的，并且等号右边是常量不会触发初始化</font>
+
+      ```java
+      private static final int a = 1; // 访问该变量不会触发初始化
+      private static final LocalDateTime dateTime = LocalDateTime.now(); // 会
+      ```
+
+    - 调用 Class.forName(String className)
+
+    - new 一个该类的对象
+
+    - 执行 Main 方法的当前类
+
+      ```java
+      // 打印顺序 D A C B C B
+      public class OneClass {
+          public static void main(String[] args) {
+              System.out.println("A");
+              new OneClass();
+              new OneClass();
+          }
+          public OneClass() {
+              System.out.println("B");
+          }
+          
+          // 实例代码块会与构造方法混合，在构造方法前执行，多个实例代码块自上而下执行
+          {
+              System.out.println("C");
+          }
+          static {
+              System.out.println("D");
+          }
+      }
+      ```
+
+    - 数组的创建不会导致数组中元素的类的初始化
+
+      ```java
+      OneClass[] arr = new OneClass[10]; // 不会初始化 OneClass 类
+      ```
+
+    - 存在继承关系的初始化
+
+      - 直接访问父类静态变量，不会触发子类的初始化
+      - 子类的初始化\<clinit>调用前，会先调用父类的\<clinit>初始化方法
+
+      ```java
+      public class OneClass {
+          public static void main(String[] args) {
+              A a = new B();
+              // B类中不定义a变量，结果为：3  3  3
+              // B类中定义a变量，结果为：1  1  3
+              System.out.println(a.a+" "+A.a+" "+B.a);
+          }
+      
+          static class A {
+              static {
+                  a = 2;
+                  System.out.println("A 类初始化");
+              }
+              static int a = 1;
+          }
+      
+          static class B extends A {
+              // static int a = 4;
+              static  {
+                  a = 3;
+                  System.out.println("B 类初始化");
+              }
+          }
+      }
+      ```
+
+- 使用
+
+- 卸载
 
 
 
