Oct 19nd 2023 First Commit

--- a/后端2.md
+++ b/后端2.md
@@ -2590,7 +2590,7 @@ public class MyDao {
 
 ### Arthas
 
-> <a href="https://arthas.aliyun.com/doc/">Arthas 是一款线上监控诊断产品</a>
+> <a href="https://arthas.aliyun.com/doc/">Arthas 是一款线上监控诊断的产品</a>
 
 - 启动
 
@@ -2599,14 +2599,51 @@ public class MyDao {
   ```
 
 - 常用指令
+  
+  - 参数使用说明
+  
+    - class-pattern：表示 **`指令 类的全路径限定名`**
+    - [i:]：表示 **`指令 -i 值`**
+    - [a]：表示 **`指令 -a`**
+  
   - dashboard ：显示当前系统的实时数据面板
-    - [-i]：刷新实时数据的时间间隔（ms），默认5000ms
-    - [-n]：刷新实时数据的次数
+    - [i:]：刷新实时数据的时间间隔（ms），默认5000ms
+    - [n:]：刷新实时数据的次数
+  
   - dump：将已加载类的字节码文件输出到特定目录
     - class-pattern：类的全路径限定名（cn.eli.SpringApp)
-    - [-d]：指定目录
+    - [d:]：指定目录
+  
   - jad：反编译已加载类的源码
     - class-pattern：类的全路径限定名
+  
+  - classloader：查看 classloader 的继承树，urls，类加载信息
+  
+    - [l]：按类加载的实例进行统计
+    - [t]： 打印所有 ClassLoader 的继承树
+    - [a]：列出所有 ClassLoader 加载的类，请谨慎使用
+    - [c:]：加上指定 ClassLoader 的 hashcode，可查看指定classloader的信息
+  
+  - sc：查看 JVM 已加载的类信息
+  
+    - class-pattern
+    - [d]：输出当前类的详细信息，包括这个类所加载的原始文件来源、类的声明、加载的 ClassLoader 等详细信息。如果一个类被多个 ClassLoader 所加载，则会出现多次
+  
+  - mc：将 .java 文件编译为 .class 文件
+  
+    > 注意，mc 命令有可能失败。如果编译失败可以在本地编译好`.class`文件，再上传到服务器。具体参考[retransform](https://arthas.aliyun.com/doc/retransform.html)命令说明。
+  
+    - menu/OneJavaPro.java：目录/文件名.java
+    - [d:]：指定输出目录
+    - [c:]：加上指定 ClassLoader 的 hashcode（一个java程序往往还用到了其他类，如果不结合其他类共同编译，往往会失败，而ClassLoader可以得到其他类的信息，因此，如果该java程序来自部署的class反编译，还要加上原本加载这个java程序的ClassLoader。如果对反编译的java程序进行修改，新添加的代码可能用到了该ClassLoader中未存储的类，可能导致编译失败）
+  
+  - retransform：加载外部的`.class`文件，替换内存中 jvm 已加载的类（热部署）
+  
+    - menu/OneJavaPro.class：目录/文件名.class
+    - 问题
+      - 重启会失效
+      - 不能添加方法或者字段、也不能更新正在执行的方法
+  
 
 
 
@@ -2678,7 +2715,7 @@ public class MyDao {
       private static final LocalDateTime dateTime = LocalDateTime.now(); // 会
       ```
 
-    - 调用 Class.forName(String className)
+    - 调用 Class.forName(String className) 
 
     - new 一个该类的对象
 
@@ -2747,6 +2784,261 @@ public class MyDao {
 - 使用
 
 - 卸载
+
+
+
+
+
+### 类加载器
+
+> 是java虚拟机提供给应用程序去实现获取类和接口的字节码技术
+
+#### 类加载器的分类
+
+> jdk8 及 之前版本的类加载器
+
+- 根据定义位置分类
+
+  - 一类是 Java代码中实现的（如拓展类加载器、应用程序类加载器、自定义加载器）
+
+    - jdk 中默认提供或者自定义
+    - 都继承自抽象类 ClassLoader
+
+  - 另一类是 Java虚拟机底层源码实现的（启动类加载器）
+
+    - 源代码位于 Java虚拟机的源码中，实现语言与虚拟机底层语言一致，比如 Hotspot 使用的C++
+
+    - 作用是加载程序运行时的基础类，如 java.lang.String，确保其可靠性
+
+    - 通过该加载器加载的类获取类加载器时，会返回null
+
+      ```java
+      System.out.println(String.class.getClassLoader() == null); // true
+      ```
+
+- 根据作用分类
+
+  - BootstrapClassLoader（启动类加载器）：加载 java 中最核心的类
+
+    > 添加  -Xbootclasspath/a:<font color=blue>jar包目录</font>/<font color=blue>jar包名</font>  启动参数，可以指定该jar包中的类由启动类加载器加载 
+
+    - 默认加载java安装目录下的 /jre/lib 下的类文件
+
+  - ExtClassLoader（拓展类加载器）：允许扩展 java 中比较通用的类
+
+    > 添加 -Djava.ext.dirs=<font color=blue>jar包目录</font>  启动参数，可以指定该jar包中的类由拓展类加载器加载 
+    >
+    > > 该参数默认后覆盖掉原始加载目录(/jre/lib/ext)，可以用 **对应的分隔符** 分隔多个路径，再追加原始加载目录
+    > >
+    > > > windows用 <font color=red>**;**</font> 
+    > > >
+    > > > macos/linex用 <font color=red>**:**</font> 
+
+    - 默认加载java安装目录下的 /jre/lib/ext 下的类文件
+
+  - AppClassLoader（应用程序类加载器）：加载应用使用的类
+
+    - 该加载器加载的类范围覆盖了启动类加载器和拓展类加载器
+
+  - 。。。。。。等等
+
+
+
+#### 双亲委派机制
+
+- 作用
+  - 避免恶意代码替换 JDK 中的核心类库，如自定义的String类无法替换jdk中的String类，确保核心类库的完整性和安全性
+  - 避免同一个类被多次加载
+- 原理：当一个类加载器接收到加载类的任务时，会<font color=red>自底向上查找是否加载过，再自顶向下尝试进行加载（看是否在自己的加载范围内）</font> 
+  - 顺序（父子关系）：顶——启动类加载器；中——拓展类加载器；底——应用程序类加载器
+  - 当某个类都不在各层类加载器中，会报类找不到错误
+
+
+
+#### 打破双亲委派机制
+
+> 打破方法有三种
+>
+> > 自定义类加载器
+> >
+> > 线程上下文类加载器
+> >
+> > Osgi框架的类加载器（允许同级委派，可以实现热部署功能）
+
+##### 自定义类加载器
+
+- 重写 loadClass 方法，破坏双亲委派机制
+
+- ClassLoader 抽象类源码
+
+  - 构造方法
+
+    ```java
+    // 继承该类得到的类加载器 可以指定父类加载器
+    protected ClassLoader(ClassLoader parent) {
+        this(checkCreateClassLoader(), null, parent);
+    }
+    // 继承该类得到的类加载器 若不指定父类加载器，默认为 应用程序类加载器
+    protected ClassLoader() {
+        this(checkCreateClassLoader(), null, getSystemClassLoader());
+    }
+    ```
+
+  - loadClass方法：双亲委派机制
+
+    ```java
+    public Class<?> loadClass(String name) throws ClassNotFoundException {
+        return loadClass(name, false);
+    }
+    
+    protected Class<?> loadClass(String name, boolean resolve) throws ClassNotFoundException {
+        synchronized (getClassLoadingLock(name)) {
+            // 首先，检查这个类是否已经被加载（双亲委派机制）
+            Class<?> c = findLoadedClass(name);
+            if (c == null) {
+                long t0 = System.nanoTime();
+                try {
+                    if (parent != null) {
+                        // 先让父类去加载
+                        c = parent.loadClass(name, false);
+                    } else {
+                        c = findBootstrapClassOrNull(name);
+                    }
+                } catch (ClassNotFoundException e) {
+                }
+    
+                // 如果当前类仍为空，由该类加载器加载
+                if (c == null) {
+                    long t1 = System.nanoTime();
+                    c = findClass(name);
+    
+                    // this is the defining class loader; record the stats
+                    PerfCounter.getParentDelegationTime().addTime(t1 - t0);
+                    PerfCounter.getFindClassTime().addElapsedTimeFrom(t1);
+                    PerfCounter.getFindClasses().increment();
+                }
+            }
+            // 若传递为flase，则不进行连接，也不会执行到初始化方法<clinit>
+            if (resolve) {
+                resolveClass(c);
+            }
+            return c;
+        }
+    }
+    ```
+
+  - findClass方法：由子类去实现，核心逻辑是获得字节码文件并将字节码文件给到defineClass方法
+
+    ```java
+    protected Class<?> findClass(String name) throws ClassNotFoundException {
+        throw new ClassNotFoundException(name);
+    }
+    ```
+
+  - defineClass方法：最后会追溯到本地方法，核心逻辑是做一系列检验
+
+    ```java
+    protected final Class<?> defineClass(String name, byte[] b, int off, int len, ProtectionDomain protectionDomain) throws ClassFormatError {
+        // ......
+    }
+    ```
+
+  - resolveClass方法：执行类生命周期中的连接阶段
+
+    ```java
+    protected final void resolveClass(Class<?> c) {
+        if (c == null) {
+            throw new NullPointerException();
+        }
+    }
+    ```
+
+  - <font color=red>正常实现一个自定义类加载器，不应该破坏双亲委派机制，应该重写findClass方法，比如从数据库中获得字节码文件传入到defineClass</font>
+
+##### 线程上下文类加载器
+
+> 以jdbc中 DriverManger和第三方数据库驱动Driver类的加载为例
+
+- DirverManger 类位于rt.jar中，由启动类加载
+
+- 引入第三方数据库驱动依赖，DriverManger加载第三方依赖
+
+- 问题1：DriverManger 怎么知道第三方jar包中要加载的驱动在哪？（利用到SPI机制）
+
+  - SPI机制（已jdbc的Driver为例）
+
+    ```java
+    package com.mysql.cj.jdbc;
+    
+    public class Driver enxtends NonRegisteringDriver implements java.sql.Driver {
+        public Driver() throws SQLException;
+        
+        // 只要Driver类被加载，就会执行下面初始化代码，从而完成注册。
+        // 因此此时关注该类如何被加载
+        static {
+            try {
+                DriverManger.registerDriver(new Driver());
+            }catch(SQLException var1) {
+                throw new RuntimeException("Can't register driver!");
+            }
+        }
+    }
+    ```
+
+    - 暴露实现类
+      - 在ClassPath路径下创建 META-INF/services 的文件夹
+      - 该目录下创建文件，以实现类作为文件内容，实现类实现的接口作为文件名（如文件名：java.sql.Driver  文件内容：com.mysql.cj.jdbc.Driver）
+
+    - 使用ServiceLoader加载实现类com.mysql.cj.jdbc.Driver
+
+      ```java
+      // 代码中的 Driver.class 是 java.sql.Driver 接口
+      // 目的是读取文件名与该接口名一致的文件的内容
+      ServiceLoader<Driver> loadedDrivers = ServiceLoader.load(Driver.class);
+      
+      // 该迭代器存放着对应接口的实现类，与上述文件内容保持一致
+      Iterator<Driver> driversIterator = loadedDrivers.iterator();
+      ```
+
+  - DriverManger 在初始化代码（static静态代码块）中通过 ServiceLoader 加载Driver类，即可让 Driver 类在初始化阶段完成注册
+
+- 问题2：debug模式下可得到 Driver 类是由应用程序类加载器加载的，而DriverManger 本身是由启动类加载器加载的，它是如何拿到应用程序类加载器的呢？
+
+  - SPI中ServiceLoader加载实现类Driver时，使用的是线程上下文保存的类加载器进行类的加载，这个类加载器默认是应用程序类加载器
+
+    ```java
+    public class ServiceLoader {
+        // .......
+        public static <s> ServiceLoader<S> load(Class<S> service) {
+            // 默认是 应用程序类加载器
+            ClassLoader cl = Thread.currentThread().getContextClassLoader();
+            return ServiceLoader.load(service, cl);
+        }
+    }
+    ```
+
+- 问题3：JDBC案例中真的打破了双亲委派机制吗？
+
+  - 周志明《深入理解Java虚拟机》提到打破了该机制
+  - 实际上：没有，无论是DriverManger类的加载还是Driver实现类的加载，都是按该机制流程加载的。只是Driver实现类的加载由指定的类加载器直接加载（区别于访问类的静态变量导致类加载等间接加载方式）
+
+
+
+#### Jdk8之后的类加载器
+
+> 由于JDK9引入了module的概念，类加载器在设计上发生了很多变化
+
+- 启动类加载器使用 Java 编写，位于 jdk.internal.loader.ClassLoaders 类中。
+  - 启动类加载器由 Bootstrap（c++)   变为   BootClassLoader（java）
+  - java中的BootClassLoader继承自BuiltinClassLoader实现从模块中找到要加载的字节码资源文件
+  - 启动类加载器依然无法通过java代码获取到，返回的依然是null，保持了统一
+- 扩展类加载器被替换为平台类加载器（Platform Class Loader）
+  - 平台类加载器遵循模块化方式加载字节码文件，所以从继承 URLClassLoader 变成了 BuiltinClassLoader，BuiltinClassLoader实现了从模块加载字节码文件。
+  - 平台类加载器的存在更多的是为了与老版本的设计方案兼容，自身没有特殊的逻辑
+
+
+
+
 
 
 
