Oct 19nd 2023 Second Commit

--- a/后端2.md
+++ b/后端2.md
@@ -3040,6 +3040,85 @@ public class MyDao {
 
 
 
+### 运行时数据区
+
+- 线程不共享（每个线程都有各自的数据区）
+
+  - 程序计数器：在代码执行过程中，程序计数器会记录下一行字节码指令的地址。执行完当前指令后，虚拟机的执行引擎根据程序计数器执行下一行指令
+
+    - 控制解释器解释指令的顺序
+    - 在多线程执行情况下，java虚拟机需要通过程序计数器记录指令执行到的位置
+
+  - java虚拟机栈：采用栈的数据结构来管理方法调用中的基本数据，每个方法的调用使用一个栈帧来保存
+
+    - 栈帧的组成
+
+      - 局部变量表：在运行过程中存放所有的局部变量
+
+        > 栈帧中的局部变量表是一个数组，数组中的每一个位置称之为槽（slot），<font color=red>long和double类型占用两个槽，其他类型占用一个槽</font>
+
+        ```java
+        public int add(int i, int j) {
+            int k = 2;
+            return i+j+k;
+        }
+        ```
+
+        ```java指令
+        0 iconst_2
+        1 istore_3
+        2 iload_1
+        3 iload_2
+        4 iadd
+        5 iload_3
+        6 iadd
+        7 ireturn
+        ```
+
+        | Nr.  | 起始pc（起始生效位置） | 长度（生效范围） | 序号（槽的编号） | 名字 |
+        | ---- | ---------------------- | ---------------- | ---------------- | ---- |
+        | 0    | 0                      | 8（0-7）         | 0                | this |
+        | 1    | 0                      | 8（0-7）         | 1                | i    |
+        | 2    | 0                      | 8（0-7）         | 2                | j    |
+        | 3    | 2                      | 6（2-7）         | 3                | k    |
+
+      - 操作数栈：
+
+        - 用来存放中间数据的一小块区域
+        - <font color=red>在编译期就可以确定操作数栈的最大深度，从而在执行时正确的分配内存大小</font>
+
+      - 帧数据
+
+        - 动态链接：保存了符号引用与运行时常量池内存地址的映射关系
+
+          - 本类的静态引用会在连接的解析阶段将符号引用变为内存地址引用，但对其他类的静态变量的符号引用暂时不会去解析。
+          - 对其他类中的静态变量的符号引用会在运行时通过帧数据中的动态链接进行解析
+
+        - 方法出口：在method2方法入栈前，需要在method2的栈帧中记录method1方法中已执行到的位置，之后method2栈帧出站时，method2将栈帧中记录的method1执行到的位置交给程序计数器
+
+          ```java
+          public static void main() {
+              method1();
+          }
+          public static void method1() {
+              // ...
+              method2();
+              // ...
+          }
+          public static void method2() {
+              // ...
+          }
+          ```
+
+        - 异常表：存放的是代码中异常的处理信息，包含了try代码块和catch代码块执行后跳转到的字节码指令位置
+
+  - 本地方法栈（native方法）
+
+- 线程共享
+
+  - 方法区
+  - 堆
+
 
 
 
