Oct 20th 2023 First Command

--- a/后端2.md
+++ b/后端2.md
@@ -2487,7 +2487,7 @@ public class MyDao {
 
   - 操作数栈（临时存放）
 
-  - 局部变量表数据（局部变量存放位置）
+  - [局部变量表数据](#局部变量表)（局部变量存放位置）
 
     ```java
     public static void main(String args) {
@@ -2590,7 +2590,7 @@ public class MyDao {
 
 ### Arthas
 
-> <a href="https://arthas.aliyun.com/doc/">Arthas 是一款线上监控诊断的产品</a>
+> [Arthas 是一款线上监控诊断的产品](https://arthas.aliyun.com/doc/)
 
 - 启动
 
@@ -2605,6 +2605,8 @@ public class MyDao {
     - class-pattern：表示 **`指令 类的全路径限定名`**
     - [i:]：表示 **`指令 -i 值`**
     - [a]：表示 **`指令 -a`**
+  
+  - memory：查看JVM内存信息
   
   - dashboard ：显示当前系统的实时数据面板
     - [i:]：刷新实时数据的时间间隔（ms），默认5000ms
@@ -2651,14 +2653,14 @@ public class MyDao {
 
 ### 类的生命周期
 
-- 加载
+- <span id="加载">加载</span>
 
   - 首先，类加载器根据类的全限定名通过不同渠道以二进制流的方式获取字节码信息
     - 本地文件中的类
     - 动态代理生成的类
     - 通过网络传输的类
-  - 类加载器在加载完类之后，java虚拟机会将字节码中的信息保存到方法区中：生成一个 InstanceKlass 对象，保存类的所有信息（如基本信息、常量池、字段、方法等），还包含实现特定功能比如多态的信息（虚方法表）
-  - java虚拟机还会在堆中生成一份与方法区中数据类似的 java.lang.Class 对象，作用是在 java代码中去获取类的信息以及存储静态字段的数据（如反射）（jdk8及之后静态字段数据存放在堆中的类信息中）
+  - 类加载器在加载完类之后，java虚拟机会将<font color=red>字节码中的信息保存到[方法区](#方法区)中</font>：生成一个 InstanceKlass 对象，保存类的所有信息（如基本信息、常量池、字段、方法等），还包含实现特定功能比如多态的信息（虚方法表）
+  - java虚拟机<font color=red>还会在堆中生成一份与方法区中数据类似的 java.lang.Class 对象</font>，作用是在 java代码中去获取类的信息以及存储静态字段的数据（如反射）（jdk8及之后静态字段数据存放在堆中的类信息中）
   - 方法区中的类数据 和 堆区中的类数据 相关联
   - 为什么在方法区中和堆中都生成一份类数据
     - 方法区中的是由c++生成的，不便操作
@@ -3040,84 +3042,259 @@ public class MyDao {
 
 
 
-### 运行时数据区
+### 运行时内存区
 
-- 线程不共享（每个线程都有各自的数据区）
+#### 线程不共享区
 
-  - 程序计数器：在代码执行过程中，程序计数器会记录下一行字节码指令的地址。执行完当前指令后，虚拟机的执行引擎根据程序计数器执行下一行指令
+> 每个线程都有各自的数据区，有三块区域
+>
+> > 程序计数器
+> >
+> > java虚拟机栈
+> >
+> > 本地方法栈
 
-    - 控制解释器解释指令的顺序
-    - 在多线程执行情况下，java虚拟机需要通过程序计数器记录指令执行到的位置
+- 程序计数器：在代码执行过程中，程序计数器会记录下一行字节码指令的地址。执行完当前指令后，虚拟机的执行引擎根据程序计数器执行下一行指令
 
-  - java虚拟机栈：采用栈的数据结构来管理方法调用中的基本数据，每个方法的调用使用一个栈帧来保存
+  - 控制解释器解释指令的顺序
+  - 在多线程执行情况下，java虚拟机需要通过程序计数器记录指令执行到的位置
 
-    - 栈帧的组成
+- java虚拟机栈：采用栈的数据结构来管理方法调用中的基本数据，每个方法的调用使用一个栈帧来保存
 
-      - 局部变量表：在运行过程中存放所有的局部变量
+  - 栈帧的组成
 
-        > 栈帧中的局部变量表是一个数组，数组中的每一个位置称之为槽（slot），<font color=red>long和double类型占用两个槽，其他类型占用一个槽</font>
+    - <span id="局部变量表">局部变量表</span>：在运行过程中存放所有的局部变量
+
+      > 栈帧中的局部变量表是一个数组，数组中的每一个位置称之为槽（slot），<font color=red>long和double类型占用两个槽，其他类型占用一个槽</font>
+
+      ```java
+      public int add(int i, int j) {
+          int k = 2;
+          return i+j+k;
+      }
+      ```
+
+      ```java指令
+      0 iconst_2
+      1 istore_3
+      2 iload_1
+      3 iload_2
+      4 iadd
+      5 iload_3
+      6 iadd
+      7 ireturn
+      ```
+
+      | Nr.  | 起始pc（起始生效位置） | 长度（生效范围） | 序号（槽的编号） | 名字 |
+      | ---- | ---------------------- | ---------------- | ---------------- | ---- |
+      | 0    | 0                      | 8（0-7）         | 0                | this |
+      | 1    | 0                      | 8（0-7）         | 1                | i    |
+      | 2    | 0                      | 8（0-7）         | 2                | j    |
+      | 3    | 2                      | 6（2-7）         | 3                | k    |
+
+    - 操作数栈：
+
+      - 用来存放中间数据的一小块区域
+      - <font color=red>在编译期就可以确定操作数栈的最大深度，从而在执行时正确的分配内存大小</font>
+
+    - 帧数据
+
+      - 动态链接：保存了符号引用与运行时常量池内存地址的映射关系
+
+        - 本类的静态引用会在连接的解析阶段将符号引用变为内存地址引用，但对其他类的静态变量的符号引用暂时不会去解析。
+        - 对其他类中的静态变量的符号引用会在运行时通过帧数据中的动态链接进行解析
+
+      - 方法出口：在method2方法入栈前，需要在method2的栈帧中记录method1方法中已执行到的位置，之后method2栈帧出站时，method2将栈帧中记录的method1执行到的位置交给程序计数器
 
         ```java
-        public int add(int i, int j) {
-            int k = 2;
-            return i+j+k;
+        public static void main() {
+            method1();
+        }
+        public static void method1() {
+            // ...
+            method2();
+            // ...
+        }
+        public static void method2() {
+            // ...
         }
         ```
 
-        ```java指令
-        0 iconst_2
-        1 istore_3
-        2 iload_1
-        3 iload_2
-        4 iadd
-        5 iload_3
-        6 iadd
-        7 ireturn
-        ```
+      - 异常表：存放的是代码中异常的处理信息，包含了try代码块和catch代码块执行后跳转到的字节码指令位置
 
-        | Nr.  | 起始pc（起始生效位置） | 长度（生效范围） | 序号（槽的编号） | 名字 |
-        | ---- | ---------------------- | ---------------- | ---------------- | ---- |
-        | 0    | 0                      | 8（0-7）         | 0                | this |
-        | 1    | 0                      | 8（0-7）         | 1                | i    |
-        | 2    | 0                      | 8（0-7）         | 2                | j    |
-        | 3    | 2                      | 6（2-7）         | 3                | k    |
+- 本地方法栈
 
-      - 操作数栈：
+  - 区别于java虚拟机栈，本地方法栈存储的是native本地方法的栈帧
+  - 在Hotspot虚拟机中，<font color=red>java虚拟机栈和本地方法栈实现上使用了同一个栈空间</font>
 
-        - 用来存放中间数据的一小块区域
-        - <font color=red>在编译期就可以确定操作数栈的最大深度，从而在执行时正确的分配内存大小</font>
 
-      - 帧数据
 
-        - 动态链接：保存了符号引用与运行时常量池内存地址的映射关系
+#### 线程共享区
 
-          - 本类的静态引用会在连接的解析阶段将符号引用变为内存地址引用，但对其他类的静态变量的符号引用暂时不会去解析。
-          - 对其他类中的静态变量的符号引用会在运行时通过帧数据中的动态链接进行解析
+> 所有线程共享的数据区，有两块区域
+>
+> > 堆
+> >
+> > 方法区
 
-        - 方法出口：在method2方法入栈前，需要在method2的栈帧中记录method1方法中已执行到的位置，之后method2栈帧出站时，method2将栈帧中记录的method1执行到的位置交给程序计数器
+- 堆
 
-          ```java
-          public static void main() {
-              method1();
-          }
-          public static void method1() {
-              // ...
-              method2();
-              // ...
-          }
-          public static void method2() {
-              // ...
-          }
-          ```
+  - 说明
 
-        - 异常表：存放的是代码中异常的处理信息，包含了try代码块和catch代码块执行后跳转到的字节码指令位置
+    - 一般java程序中堆内存是空间最大的一块内存区域。创建出来的对象都存在堆内存上
+    - 栈上的局部变量表中，可以存放堆上对象的引用
+    - 静态变量也可以存放堆上对象的引用，通过静态变量就可以实现对象在线程之间的共享
+    - java虚拟机<font color=red>还会在类的加载阶段在堆中生成一份与方法区中数据类似的 java.lang.Class 对象</font>，作用是在 java代码中去获取类的信息以及存储静态字段的数据（如反射）（jdk8及之后静态字段数据存放在堆中的类信息中）
 
-  - 本地方法栈（native方法）
+  - 三部分
 
-- 线程共享
+    - used：指的是当前已使用的堆内存
+    - total：java虚拟机已经分配的可用堆内存
+    - max：java虚拟机可以分配的最大堆内存
 
-  - 方法区
-  - 堆
+  - 测试代码（可用 arthas 的 memory 命令检测）
+
+    ```java
+    ArrayList<Object> objects = new ArrayList<>();
+    while (true) {
+        System.in.read(); // 每按一次回车，提交一次输入
+        int bytes = 100*1024*1024;
+        objects.add(new byte[bytes]);
+        System.out.printf("增加了 %s MB%n", bytes/1024/1024);
+    }
+    ```
+
+- <span id="方法区">方法区</span>
+
+  > 方法区是《java虚拟机规范》中设计的虚拟概念，每款java虚拟机在实现上都各不相同。
+
+  - Hotspot 方法区设计（可通过 arthas 的 memory 指令查看）
+    - <font color=red>JDK7及之间版本</font>将方法区存放在<font color=red>堆区域的永生代空间（ps_perm_gen）</font>，堆的大小由虚拟机参数来控制
+    - <font color=red>JDK8及之后版本</font>将方法区存放在<font color=red>元空间（metaspace）</font>中，元空间位于操作系统维护的<font color=red>直接内存</font>中，默认情况下只要不超过操作系统的承受上限，可以一直分配
+
+  - 存放的数据
+    - 类的元信息：保存了所有类的基本信息（如基本信息、常量池位置引用、字段、方法位置引用、虚方法表）
+    - 运行时常量池：保存了字节码文件中的常量池的内容
+    - 字符串常量池（jdk7之前）
+
+
+
+#### 特殊的内存区
+
+- 字符串常量池（位于堆中）：保存了字符串常量
+
+  ```java
+  // 先创建对象，再加载字符串常量池，再完成String初始化
+  // 最后，局部变量表中 s1槽 存储堆中该String对象的内存地址
+  String s1 = new String("abc"); 
+  // 局部变量表中 s2槽 存储字符串常量池“abc”的内存地址
+  String s2 = "abc";
+   // 内存地址对比，false
+  System.out.println(s1 == s2);
+  
+  
+  
+  // 创建String对象,获得其堆引用(1)  操作数栈 ->[(1)]
+   0 new #2 <java/lang/String>
+  // 复制操作数栈顶部数据   栈->[(1),(1)]
+   3 dup
+  // 从字符串常量池中读取"abc"引用(2)  栈->[(2),(1),(1)]
+   4 ldc #3 <abc> 
+  // 调用String初始化方法，将堆中String对象初始化完成    栈->[(1)]
+   6 invokespecial #4 <java/lang/String.<init> : (Ljava/lang/String;)V>
+  // 将String对象堆引用(1)存储到 s1槽 上
+   9 astore_1                   
+  10 ldc #3 <abc>
+  12 astore_2
+  // 此时 s1槽 和 s2槽 存放的是不同的内存地址
+  // 。。。。。。
+  ```
+
+  - 版本迭代
+
+    - jdk7之前：运行时常量池逻辑包含字符串常量池，跟随方法区位于堆的永久代中
+    - jdk7版本：字符串常量池被从方法区拿到了堆中，运行时常量池还在永久代
+    - jdk8及之后：字符串常量池还在堆中，永久代空间被移出，运行时常量池跟随方法区移到元空间中
+
+  - String对象的 intern() 方法往常量池中存放数据，并返回常量池中该数据的引用（jdk7之前）
+
+    ```java
+    String s1 = "a";
+    String s2 = "b";
+    String s3 = "ab";
+    // 底层调用StringBuilder的拼接方法，返回一个String对象的引用
+    String s4 = s1+s2;
+    // "ab"在字符串常量池中已存在，不会再重复存放，只返回该引用
+    String s5 = (s1+s2).intern();
+    System.out.println(s3==s4);  // false
+    System.out.println(s3==s5);  // true
+    ```
+
+  - 版本迭代
+
+    ```java
+    // jdk 11 环境
+    // String s0 = "ab";  // 字符串常量池中会存在“ab”字符串
+    String s1 = "a";
+    String s2 = "b";
+    String s3 = s1+s2;
+    String s4= s3.intern();
+    // jdk7之前：无论有没有第二行代码，都为false
+    // jdk7及之后：有第二行代码，返回false；没有第二行代码，返回true
+    System.out.println(s3 == s4);
+    ```
+
+    - jdk 7 之前：inter()方法会把第一次遇到的字符串实例复制到永久代的字符串常量池中，返回的也是永久代里面这个字符串实例的引用
+    - jdk 7 及之后：由于字符串常量在堆中，为节省内存，inter()方法只将第一次遇到的字符串的引用放入字符串常量池（上述代码中 s3 和 s4 均为堆引用）
+
+- 静态变量的存储：JDK7及之后的版本中，静态变量是存放在[堆中的Class对象](#加载)中，脱离的永久代
+
+- 直接内存
+
+  
+
+
+
+#### 内存溢出
+
+- java虚拟机栈内存溢出（StackOverflowError）
+
+  - 栈内存默认大小
+    - Linux x86（64位）：1MB
+    - Windows：基于操作系统
+
+  - 设置栈内存大小
+    - 语法：-Xss栈大小
+    - 单位：字节（默认，必须是1024的倍数）、k/K（KB）、m或M（MB）、g或G（GB）
+    - 范围：Windows（64位）下的JDK8测试最小值位180K，最大值为1024M
+
+- 堆内存溢出（OutOfMemoryError）
+
+  - 堆内存默认大小
+
+    - max大小默认是系统内存的1/4
+    - total大小默认是系统内存的1/64
+
+  - 设置total、max大小
+
+    > 实际生产中，一般将total和max设置为同样的值
+
+    - 设置total大小：-Xms大小（必须大于1M）
+    - 设置max大小：-Xmx大小（必须大于2M）
+    - 单位：字节（默认，必须是1024的倍数）、k/K（KB）、m或M（MB）、g或G（GB）
+
+  - 是否直到 used=total=max 时，报出堆内存溢出
+
+    > 不是，堆内存溢出的判断条件比较复杂，实际上，used接近max时就可能报出
+
+- 方法区内存溢出
+
+  > 实际生产中，需要设置元空间最大大小
+
+  - 默认大小
+    - jdk7及之间版本：方法区存放在堆中的永久代空间，默认有上限，堆中永久代的大小可通过虚拟机参数 -XX:MaxPermSize=值  来控制
+    - jdk8及之后版本：方法区存放在直接内存中，默认无上限。可以使用 -XX:MaxMetaspaceSize=值  将元空间最大大小进行限制
+  - 单位：字节（默认，必须是1024的倍数）、k/K（KB）、m或M（MB）、g或G（GB）
 
 
 
